@@ -7,6 +7,9 @@ Version 0.6.7                               "I said 'Step pause turn
   * [cmdline]: Avoid dpkg and infinite loop in download-only mode
                (Closes: #629266) (LP: #975793)
 
+  * [cmdline]: Check for apt_init errors in cmdline_download.cc
+               (Closes: #670379)
+
 - New translations:
 
   * Croatian (Closes: #667934)
